modified controller and tables created
